# cerdito

./: README.md
cerdito/: Cargo.toml  README.md
cerdito-derive/: Cargo.toml  README.md
cerdito-derive/src/: lib.rs
cerdito/src/: cerdito.rs  lib.rs
rustbif/: Cargo.toml  README.md
rustbif/examples/: main.rs  tokio.rs
rustbif/src/: lib.rs  rustbif.rs
