[package]
name = "cerdito-derive"
authors = ["Igor Y. Khomyakov <ikh@ikhsoftware.com>", "Dmitriy Kumshayev <dq@mail.com>"]
version = "0.1.2"
edition = "2021"
#homepage = "https://www.ikhsoftware.com/cerdito/cerdito-derive"
keywords = ["serialization", "deserialization", "encoding", "decoding"]
categories = ["encoding"]
description = "A Rust serialization and deserialization framework"
#documentation = "https://docs.rs/cerdito"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/ikhomyakov/cerdito"
rust-version = "1.79"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
