[package]
name = "cerdito"
authors = ["Igor Y. Khomyakov <ikh@ikhsoftware.com>", "Dmitriy Kumshayev <dq@mail.com>"]
version = "0.1.2"
edition = "2021"
#homepage = "https://www.ikhsoftware.com/cerdito/cerdito"
keywords = ["serialization", "deserialization", "encoding", "decoding"]
categories = ["encoding"]
description = "Rust encoding and decoding framework"
#documentation = "https://docs.rs/cerdito"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/ikhomyakov/cerdito"
rust-version = "1.79"

[dependencies]
build_async = "0.1.1"
cerdito-derive = { version = "0.1.4", path = "../cerdito-derive" }
paste = "1.0.15"
