[package]
name = "rustbif"
authors = ["Igor Y. Khomyakov <ikh@ikhsoftware.com>", "Dmitriy Kumshayev <dq@mail.com>"]
version = "0.1.1"
edition = "2021"
#homepage = "https://www.ikhsoftware.com/cerdito/rustbif"
keywords = ["serialization", "deserialization", "encoding", "decoding"]
categories = ["encoding"]
description = "Rust Binary Format"
#documentation = "https://docs.rs/rustbif"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/ikhomyakov/cerdito"
rust-version = "1.79"


[dependencies]
build_async = "0.1.1"
cerdito = { version = "0.1.2", path = "../cerdito" }
paste = "1.0.15"
zigzag = "0.1.0"

[dev-dependencies]
multibase = "0.9.1"
base-x = "0.2.11"
tokio = { version = "1.39.2", features = ["full"] }
